apps/homepage/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: homepage
          namespace: homepage
          port: 3000
  tls:
    secretName: production-cyphers-app-tls
